<resources>
    <!-->placeholders<!-->
    <string name="player_name_placeholder">%1s</string>
    <string name="player_role_placeholder">%1s</string>
    <string name="player_role_description_placeholder">%1s</string>
    <string name="info_title_placeholder">%1s</string>
    <string name="info_description_placeholder">%1s</string>
    <string name="round_results_placeholder">%1$</string>
    <string name="round_title_placeholder">%1$</string>
    <string name="round_description_placeholder">%1$</string>
    <!-->end placeholders<!-->
    <string name="app_name">SCP Escape</string>
    <string name="welcome_d">Welcome to the Foundation, D Boi</string>
    <string name="foundation_logo">Foundation Logo</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="load_game">Load Game</string>
    <string name="credits_to">I\'d like to thank all the people that made this possible, giving us all their tales.
    Did you know that world-renowned writer Stephen King was once hit by a car? Just something to consider.\n
    Credits to:</string>
    <string name="credits_list">The SCP wiki\n/x/\nDrGears\nThe O5 Council\nAngry Lizard\n\[REDACTED]\nPeanut</string>
    <string name="enable_scp_1471">Enable SCP-1471</string>
    <string name="report_breach">Report Containment Breach</string>
    <string name="report_bug_description">Report technical issues or suggest new features</string>
    <string name="pass_play">Pass Play</string>
    <string name="pass_play_description">Play with your friends on a single device.</string>
    <string name="players_count">Players Count</string>
    <string name="choose_players_count">Set the number of players</string>
    <string name="mode_classic_players_lower">Two SCPs, the rest are class D personnel</string>
    <string name="mode_classic_players_higher">Three SCPs, the rest are class D personnel</string>
    <string name="players_count_error">This should\'t have happened. Please report immediately to your supervisor.</string>
    <string name="player_name">Player Name</string>
    <string name="tap_for_pic">Tap here to add a profile pic.</string>
    <string name="create_player">New Player</string>
    <string name="player_name_filter">Filter Players By Name</string>
    <string name="game_id_required">Game ID required</string>
    <string name="enter_player_name">Enter Player\'s Name</string>
    <string name="Cancel" />
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="new_player">New Player</string>
    <string name="players_filter">Filter Players</string>
    <string name="max_players_reached">Max Players Number Reached</string>
    <string name="placeholder">placeholder</string>
    <string name="classic_mode">Classic Mode</string>
    <string name="classic_mode_description">Guards, Scientists and MTF against SCP-106</string>
    <string name="description">Description</string>
    <string name="rules">Rules</string>
    <string name="play">Play</string>
    <string name="round_title">Round Title</string>
    <string name="round_description">Round Description</string>
    <string name="round_descriptive_image">Round Descriptive Image</string>
    <string name="mode_name">Mode Name</string>
    <string name="mode_short_description">Mode Short Description</string>
    <string name="mode_image">Image for the Mode</string>
    <string name="remaining_players">"The remaining players will play as %1s"</string>
    <string name="pass_to_player">Pass device to %1s</string>
    <string name="i_am_player">I\'m %1s</string>
    <string name="player_picture">Player Picture</string>
    <string name="voted_by">Voted By</string>
    <string name="voted">Voted</string>
    <string name="round_no_deaths">Everyone is still standing. But you are still not out of dangers.</string>
    <string name="end_game">End Game</string>
    <string name="load_game_message">Do you want to load game X started on Y, Z players still standing?</string>
    <string name="load">Load</string>
    <string name="resume">Resume</string>
    <string name="close_game">Close Game</string>
    <string name="pause_menu">Pause Menu</string>
    <string name="mode">Mode</string>
    <string name="issue_date">Issue Date: %1s</string>
    <string name="player_search_hint">Search Player</string>
    <string name="deployed_agents">Deployed Agents:</string>
</resources>
