<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.passdevice.view.PassDeviceFragment">


    <TextView
        android:id="@+id/tvPassDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_to_player"
        app:layout_constraintBottom_toTopOf="@+id/ivPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/ivPlayer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/player_picture"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toTopOf="@+id/bConfirmPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassDevice" />

    <Button
        android:id="@+id/bConfirmPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayer" />


</androidx.constraintlayout.widget.ConstraintLayout>