<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvGameMode"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/ivMode"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/mode_image"
                android:src="@drawable/black_hole"
                android:tint="#fff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvModeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_name"
                app:layout_constraintStart_toEndOf="@+id/ivMode"
                app:layout_constraintTop_toTopOf="@+id/ivMode" />

            <TextView
                android:id="@+id/tvModeDescription"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:minLines="3"
                android:text="@string/mode_short_description"
                app:layout_constraintStart_toEndOf="@+id/tvModeName"
                app:layout_constraintStart_toStartOf="@+id/tvModeName"
                app:layout_constraintTop_toBottomOf="@+id/tvModeName" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>